# windows-applock

./: .gitignore  CONTRIBUTING.md  GUIDELINE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/: site.webmanifest
scripts/: sync-version.js
src/: App.module.css  App.tsx  constants.ts  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: gatekeeper.json
src-tauri/src/: app_scanner.rs  credential_manager.rs  credential_verifier.rs  crypto.rs  file_watcher.rs  fullscreen_handler.rs  grace_manager.rs  icon_extractor.rs  input_blocker.rs  keyboard_hook.rs  lib.rs  lock_session.rs  main.rs  onboarding_finalizer.rs  overlay_manager.rs  process_guard.rs  process_watcher.rs  rate_limiter.rs  recovery_manager.rs  secure_storage.rs  settings_manager.rs  system_event_watcher.rs  uwp_handler.rs  verify_logger.rs  watcher_supervisor.rs  window_manager.rs
src-tauri/src/commands/: apps.rs  auth.rs  config.rs  credentials.rs  mod.rs  scanner.rs  storage.rs  system.rs  watcher.rs  window_management.rs
src-tauri/src/models/: config.rs  mod.rs  state.rs
src-tauri/src/services/: auth.rs  detailed_scanner.rs  mod.rs  monitor.rs  process_win.rs  scanner.rs  security.rs
src-tauri/src/setup/: mod.rs  shortcut.rs  tray.rs  window.rs
src-tauri/src/utils/: config.rs
src/components/: CountUp.tsx  GithubIcon.tsx  ModernSelect.tsx
src/components/dashboard/: GraceSessionPanel.tsx
src/components/modals/: ConfirmModals.tsx
src/components/onboarding/: FinalizeProgressUI.tsx
src/components/recovery/: FullResetFlow.tsx  HardLockScreen.tsx  RecoveryKeyDisplay.tsx  RecoveryKeyInput.tsx
src/components/settings/: AccountSetup.tsx  Contribution.tsx  Credits.tsx  SecurityPolicy.tsx  SystemStyle.tsx  UpdatesSection.tsx  settings.tsx
src/hooks/: index.ts  useAppInit.ts  useApps.ts  useAuth.ts  useConfig.ts  usePlaceholder.ts  useToast.ts
src/pages/: Dashboard.tsx  Gatekeeper.tsx  Onboarding.tsx  Setup.tsx  Unlock.tsx
src/services/: apps.service.ts  auth.service.ts  config.service.ts  graceSessionService.ts  index.ts  recoveryService.ts  scannerService.ts  system.service.ts  verificationService.ts  windowManagerService.ts
src/styles/: App.module.css  index.css
src/types/: index.ts
