[package]
name = "applock"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "applock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
aes-gcm = "0.10"
sysinfo = "0.33"
rand = "0.8"
base64 = "0.21"
zeroize = "1.7"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
winreg = "0.52"
sha2 = "0.11.0"
ntapi = "0.4"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.58", features = [
    "Management_Deployment",
    "Foundation_Collections",
    "ApplicationModel",
    "Win32_UI_Shell",
    "Win32_System_RemoteDesktop",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Com",
    "Win32_System_JobObjects",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
] }
image = { version = "0.25", features = ["png"] }
machine-uid = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
lazy_static = "1.5.0"
hex = "0.4"
rayon = "1.8"
notify = "6.1"
parsy = "0.1" # Using parsy for LNK parsing fallback or similar if needed, else windows crate is enough.
# Let's keep it simple.

